change in styles.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -248,13 +248,15 @@
   }
   .page .container .calculator__result {
     height: 127px;
+    font-size: 3.4375rem;
   }
   .page .container .calculator__keys {
     height: 482px;
-    padding: 30px;
+    padding: 28px;
     gap: 25px;
   }
   .page .container .calculator__key {
+    font-size: 2.5rem;
     border-radius: 12px;
   }
 }
