--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -123,9 +123,11 @@
             .calculator
                 &__result
                     height: 127px
+                    font-size: 3.4375rem
                 &__keys
                     height: 482px
-                    padding: 30px
+                    padding: 28px
                     gap: 25px
                 &__key
+                    font-size: 2.5rem
                     border-radius: 12px
