change class theme at dark

--- a/css/styles.css
+++ b/css/styles.css
@@ -180,7 +180,7 @@
   height: 26px;
   display: flex;
   align-items: center;
-  justify-content: left;
+  justify-content: center;
   padding: 0 3px;
   margin-left: 10px;
   border-radius: 13px;
@@ -258,6 +258,9 @@
   .page .container .calculator__key {
     font-size: 2.5rem;
     border-radius: 12px;
+  }
+  .page .container .calculator__key:nth-child(17), .page .container .calculator__key:nth-child(18), .page .container .calculator__key:nth-child(4) {
+    font-size: 1.75rem;
   }
 }
 
