--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -55,7 +55,7 @@
                     height: 26px
                     display: flex
                     align-items: center
-                    justify-content: left
+                    justify-content: center
                     padding: 0 3px
                     margin-left: 10px
                     border-radius: 13px
@@ -131,3 +131,6 @@
                 &__key
                     font-size: 2.5rem
                     border-radius: 12px
+
+                    &:nth-child(17), &:nth-child(18), &:nth-child(4)
+                        font-size: 1.75rem
