--- a/css/styles.css
+++ b/css/styles.css
@@ -180,7 +180,7 @@
   height: 26px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: left;
   padding: 0 3px;
   margin-left: 10px;
   border-radius: 13px;
