--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -55,7 +55,7 @@
                     height: 26px
                     display: flex
                     align-items: center
-                    justify-content: left
+                    justify-content: center
                     padding: 0 3px
                     margin-left: 10px
                     border-radius: 13px
@@ -125,7 +125,7 @@
                 &__result
                     height: 127px
                     font-size: 3.4375rem
-                    
+
                 &__keys
                     height: 482px
                     padding: 28px
